--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: USER-SERVICE
+    name: User-Service
   datasource:
     url: jdbc:mysql://localhost:3306/microservices
     username: root
